--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,15 @@
   "dependencies": {
     "express": "^4.16.3",
     "superagent": "^3.8.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "eslint": "^5.2.0",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "jest": "^23.4.1"
   }
 }
