--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.18.0",
     "jest": "^23.4.1",
+    "prop-types": "^15.6.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0"
